tests/rt/pos/ifc/pini01.trp
let pini authority val x = 42 raisedTo `<secret;#root-integrity>` 
    fun loop () = loop () 
    val y = if x > 100 then loop () else debugpc () 
    val z = 532
in z 
end
